RESOLVED FIXED221188
[LFC][IFC] Do not use a max value to indicate infinite available space in InlineContentBreaker::tryBreakingTextRun
https://bugs.webkit.org/show_bug.cgi?id=221188
Summary [LFC][IFC] Do not use a max value to indicate infinite available space in Inl...
alan
Reported 2021-01-31 09:36:32 PST
ssia
Attachments
Patch (7.22 KB, patch)
2021-01-31 09:44 PST, alan
no flags
alan
Comment 1 2021-01-31 09:44:58 PST
EWS
Comment 2 2021-01-31 11:00:44 PST
commit-queue failed to commit attachment 418827 [details] to WebKit repository.
EWS
Comment 3 2021-01-31 12:31:29 PST
Committed r272126: <https://trac.webkit.org/changeset/272126> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418827 [details].
Radar WebKit Bug Importer
Comment 4 2021-01-31 12:32:13 PST
Note You need to log in before you can comment on or make changes to this bug.