[LFC][IFC] Do not use a max value to indicate infinite available space in InlineContentBreaker::tryBreakingTextRun https://bugs.webkit.org/show_bug.cgi?id=221188

Reviewed by Antti Koivisto.

* layout/inlineformatting/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingTextContent const):
(WebCore::Layout::InlineContentBreaker::tryBreakingTextRun const): add fast paths for cases when the available space is zero.
Note that there's a difference between returning nullopt and an empty value.
* layout/inlineformatting/InlineContentBreaker.h:


Canonical link: https://commits.webkit.org/233522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272126 268f45cc-cd09-0410-ab3c-d52691b4dbfc